# aismsg_pi

./: AISMsg.fbp  CMakeLists.txt  README.md  VERSION.cmake  copy-ocplib.bat  copy-plugin.bat
buildwin/: opencpn.lib
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  version.h.in
data/: Help.html
icons/: aismsg.xcf  aismsg_pi.xcf  icons.bat
po/: POTFILES.in  aismsg_pi.pot
src/: AISMsgDebugDialog.cpp  AISMsgDebugDialog.h  AISMsgPrefsDialog.cpp  AISMsgPrefsDialog.h  AISMsgSettingsDialog.cpp  AISMsgSettingsDialog.h  AISMsgUIBase.cpp  AISMsgUIBase.h  AISMsgUIDialog.cpp  AISMsgUIDialog.h  AISMsgUIDialogBase.cpp  AISMsgUIDialogBase.h  aismsg_pi.cpp  aismsg_pi.h  icons.cpp  icons.h  version.h
